<resources>

    <string name="app_name">Delux Designs Webshop</string>
    <string name="choose">Choose Category</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="products">Products</string>
    <string name="create_product">Create Product</string>
    <string name="category">Category</string>
    <string name="create_category">Create Category</string>
    <string name="welcome">Welcome</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="product_cost">Product cost</string>
    <string name="product_rrp">Product RRP</string>
    <string name="product_stock">Product stock</string>
    <string name="create_product_button">Create Product</string>
    <string name="category_name">Category Name</string>
    <string name="create_category_button">Create Category</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="create_user">Create User</string>
    <string name="loading">Loading.... </string>
    <string name="create_button">Create</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <color name="blue">#11C0FF</color>
    <string name="quantiry">Quantity</string>
    <string name="product_id">Product ID:</string>
    <string name="order">Order</string>
    <string name="product_text">Product</string>
    
    <string-array name="category_spinner">
        <item>Sport</item>
        <item>Mens</item>
        <item>Womens</item>
        <item>Electronics</item>
        <item>Music</item>
        <item>Shoes</item>
    </string-array>
    
</resources>
