<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:singleLine="true" />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_description"
        android:singleLine="true" />

    <EditText
        android:id="@+id/product_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_cost"
        android:singleLine="true" />

    <EditText
        android:id="@+id/product_rrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_rrp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/product_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_stock"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="80dp" >

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_product_button" />
    </LinearLayout>

</LinearLayout>